--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,10 @@
     <title>Hello World</title>
 </head>
 
-<body class="start">
+<body id="body" class=" start ">
     <h1 id="sentence">画面を押して
         <br>ください</h1>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript " src="js/jquery-3.5.1.min.js "></script>
     <script type="text/javascript " src="cordova.js "></script>
     <script type="text/javascript " src="js/index.js "></script>
 </body>
