--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -38,9 +38,12 @@
 </head>
 
 <body id="body" class=" start ">
+    <input type="button" id="go_home" value="やり直す">
     <h1 id="sentence">画面を押して
         <br>ください</h1>
-    <script type="text/javascript " src="js/jquery-3.5.1.min.js "></script>
+    <p id="touchBox">ココを長押し！</p>
+    <script type="text/javascript " src="js/jquery-3.5.1.min.js ">
+    </script>
     <script type="text/javascript " src="cordova.js "></script>
     <script type="text/javascript " src="js/index.js "></script>
 </body>
