--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <input type="button" id="go_home" value="やり直す">
     <h1 id="sentence">画面を押して
         <br>ください</h1>
-    <p id="touchBox">ココを押せ！</p>
+    <p id="touchBox">ココを長押し！</p>
     <script type="text/javascript " src="js/jquery-3.5.1.min.js ">
     </script>
     <script type="text/javascript " src="cordova.js "></script>
